# 0xDEADB00F

./: .gitignore  CMakeLists.txt  HowItWorks.md  README.md
app/: CMakeLists.txt  main.cpp
app/include/: App.hpp  AppUtil.hpp  EventManager.hpp  GameObject.hpp  Windowing.hpp
app/src/: App.cpp  EventManager.cpp  GameObject.cpp  Windowing.cpp
lib/RenderingEngine/: CMakeLists.txt
lib/RenderingEngine/include/: Renderer.hpp  RenderingEngine.hpp
lib/RenderingEngine/src/: Renderer.cpp  RenderingEngine.cpp
